@@ -1,5 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+<project xmlns="https://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"
          child.project.url.inherit.append.path="false">
     <modelVersion>4.0.0</modelVersion>
 
@@ -46,6 +46,7 @@
     <modules>
         <module>jvector-base</module>
         <module>jvector-twenty</module>
+        <module>jvector-native</module>
         <module>jvector-tests</module>
         <module>jvector-multirelease</module>
         <module>jvector-examples</module>
@@ -118,8 +119,9 @@
                             <skippedModules>jvector-examples,jvector-tests</skippedModules>
                             <additionalJOptions>
                                 <additionalJOption>--add-modules=jdk.incubator.vector</additionalJOption>
+                                <additionalJOption>--enable-preview</additionalJOption>
                             </additionalJOptions>
-                            <release>20</release>
+                            <release>21</release>
                         </configuration>
                     </execution>
                 </executions>
